# neuro-symbolic-link-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: twitch_structural.csv
notebooks/: link_prediction_baseline.ipynb  link_prediction_build_dataset.ipynb  link_prediction_nesy.ipynb  mlp_full_nesy.ipynb
notebooks/baseline/twitch_full/lr/: lr_full.ipynb
notebooks/baseline/twitch_full/lr/output/20260524_2044/: lr_full_bce_fn.csv
notebooks/baseline/twitch_full/mlp/output/20260524_2044_bce/: mlp_full_bce_fn.csv
notebooks/baseline/twitch_structural/lr/: lr_structural_pyspark.ipynb  lr_structural_sklearn.ipynb
notebooks/baseline/twitch_structural/lr/output/20260523_0627/: lr_structural_bce_fn.csv  lr_structural_bce_fp.csv
notebooks/baseline/twitch_structural/mlp/output/20260523_0654/: mlp_structural_bce_fn.csv  (+1 more)
notebooks/nesy/output/20260524_2049_lambda0.5/: mlp_full_lambda0.5_fn.csv
notebooks/nesy/output/20260524_2055_lambda2.0/: mlp_full_lambda2.0_fp.csv
notebooks/output/: README.md
notebooks/output/20260524_2044_lr/: lr_bce_fp.csv
notebooks/output/20260524_2044_mlp_bce/: mlp_full_bce_fp.csv
notebooks/output/20260524_2049_mlp_lambda0.5/: mlp_full_lambda0.5_fp.csv
notebooks/output/20260524_2052_mlp_lambda1.0/: mlp_full_lambda1.0_fn.csv  mlp_full_lambda1.0_fp.csv
notebooks/output/20260524_2055_mlp_lambda2.0/: mlp_full_lambda2.0_fn.csv
report/: Z23971583_Project_Report.md  build_pdf.py  neuro_symbolic_link_prediction.md  table_vlines.lua
results/: results_2026-05-24_2044.md
scripts/: build_dataset.py  verify_dataset.py
