[project]
name = "neuro-symbolic-link-prediction"
version = "1.0.0"
description = "Neuro-symbolic link prediction on the Twitch social network using a symbolic loss penalty derived from preferential attachment theory"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
]
